[gd_scene load_steps=39 format=3 uid="uid://bxwla2xarwyd5"]

[ext_resource type="Script" path="res://Assets/Scripts/player.gd" id="1_71tm4"]
[ext_resource type="Texture2D" uid="uid://b4b6n08afonsn" path="res://Assets/sprites/knight.png" id="1_n7k5y"]
[ext_resource type="PackedScene" uid="uid://d1fskpdhnpda3" path="res://Scenes/Explosion.tscn" id="3_18k2e"]
[ext_resource type="AudioStream" uid="uid://c7ln8s6q2jf3o" path="res://Assets/sounds/jump.wav" id="4_pg8gl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7y1fj"]
atlas = ExtResource("1_n7k5y")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_st5cr"]
atlas = ExtResource("1_n7k5y")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chpuu"]
atlas = ExtResource("1_n7k5y")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y1ga"]
atlas = ExtResource("1_n7k5y")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiek3"]
atlas = ExtResource("1_n7k5y")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk6m4"]
atlas = ExtResource("1_n7k5y")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_arwce"]
atlas = ExtResource("1_n7k5y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3rme"]
atlas = ExtResource("1_n7k5y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1owj"]
atlas = ExtResource("1_n7k5y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlkyl"]
atlas = ExtResource("1_n7k5y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vdme"]
atlas = ExtResource("1_n7k5y")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpjd3"]
atlas = ExtResource("1_n7k5y")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5x07"]
atlas = ExtResource("1_n7k5y")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcdap"]
atlas = ExtResource("1_n7k5y")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll0v1"]
atlas = ExtResource("1_n7k5y")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fradm"]
atlas = ExtResource("1_n7k5y")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_br1yf"]
atlas = ExtResource("1_n7k5y")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_neyty"]
atlas = ExtResource("1_n7k5y")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55lyf"]
atlas = ExtResource("1_n7k5y")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwj21"]
atlas = ExtResource("1_n7k5y")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v042a"]
atlas = ExtResource("1_n7k5y")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kborn"]
atlas = ExtResource("1_n7k5y")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyrog"]
atlas = ExtResource("1_n7k5y")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rouft"]
atlas = ExtResource("1_n7k5y")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06gha"]
atlas = ExtResource("1_n7k5y")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c68nm"]
atlas = ExtResource("1_n7k5y")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnaw6"]
atlas = ExtResource("1_n7k5y")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iiy6"]
atlas = ExtResource("1_n7k5y")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3hlm"]
atlas = ExtResource("1_n7k5y")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqir3"]
atlas = ExtResource("1_n7k5y")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqx0c"]
atlas = ExtResource("1_n7k5y")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l6b0"]
atlas = ExtResource("1_n7k5y")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_b0g0s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y1fj")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_st5cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y1fj")
}],
"loop": false,
"name": &"Dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chpuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y1ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiek3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk6m4")
}],
"loop": true,
"name": &"Die",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_arwce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3rme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1owj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlkyl")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vdme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpjd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5x07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcdap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll0v1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fradm")
}],
"loop": false,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_br1yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neyty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55lyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwj21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v042a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kborn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyrog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rouft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06gha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c68nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnaw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iiy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3hlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqir3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqx0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l6b0")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w0r83"]
radius = 5.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_71tm4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_b0g0s")
animation = &"Die"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_w0r83")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="Boom" parent="." instance=ExtResource("3_18k2e")]
position = Vector2(0, -5)
color = Color(0.886275, 1, 1, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pg8gl")
bus = &"SFX"

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
